Improves README, abstract for shared-key

--- a/shared-key/abstract.tex
+++ b/shared-key/abstract.tex
@@ -1,19 +1,19 @@
+\emph{Summary:}
 Shared-key cryptography is the traditional approach to cryptography and the 
 aspect of cryptography that comes as intuitive for most people.
 We instroduce definitions of security, theoretical models, how they relate to 
 practical implementations and provable security.
 
-The \acp{ILO} are that you should be able
+\emph{Intended learning outcomes:}
+After this, you should be able
 \begin{itemize}
   \item to \emph{understand} what properties can be achieved with shared-key 
     cryptography and their definitions of security.
 \end{itemize}
 
-The basics are covered by
-Chapter 5 in Anderson's \citetitle{Anderson2008sea}~\cite{Anderson2008sea} and
-Chapter 14 in Gollmann's \citetitle{Gollmann2011cs}~\cite{Gollmann2011cs}.
-%We will also cover some topics from 
-%\citetitle{KatzLindell-v1}~\cite{KatzLindell-v1} and 
-%\citetitle{GoldreichFOC-1}~\cite{GoldreichFOC-1}.
-For the remaining topics, we refer to the \citetitle{EOCS}~\cite{EOCS} (and 
-cited papers and books).
+\emph{Reading:}
+This material is covered by the following literature:
+\begin{itemize}
+  \item Chapter 5 in \citetitle{Anderson2008sea}~\cite{Anderson2008sea},
+  \item \citetitle{EOCS}~\cite{EOCS}.
+\end{itemize}
