--- a/shared-key/shared-key.bib
+++ b/shared-key/shared-key.bib
@@ -5,3 +5,16 @@
   publisher	= {Springer Science \& Business Media},
   URL={https://link.springer.com/referencework/10.1007%2F978-1-4419-5906-5}
 }
+
+@book{Anderson2008sea,
+  author={Anderson, Ross J.},
+  title={Security Engineering},
+  subtitle={A guide to building dependable distributed systems},
+  publisher={Wiley},
+  address={Indianapolis, IN},
+  year={2008},
+  edition={2},
+  ISBN={978-0-470-06852-6 (hbk.)},
+  URL={http://www.cl.cam.ac.uk/~rja14/book.html},
+  keywords={IT-s{\"a}kerhet},
+}
