--- a/intro/abstract.tex
+++ b/intro/abstract.tex
@@ -1,8 +1,10 @@
+\emph{Summary:}
 This module provides provides a short historical background of the area, 
 introduces its main principle and gives a bird's-eye view of the areas it 
 comprises.
 
-The \acp{ILO} are that you should be able
+\emph{Intended learning outcomes:}
+After this, you should be able
 \begin{itemize}
   \item to \emph{describe} an overview of the historical development of the 
     field and its core today.
