Updates one-way README to new format

--- a/one-way/abstract.tex
+++ b/one-way/abstract.tex
@@ -1,15 +1,16 @@
+\emph{Summary:}
 One-way functions is a core building block in modern cryptography.
 This session covers the basic property, hash functions and \acp{MAC}.
 
-The \acp{ILO} are that you should be able
+\emph{Intended learning outcomes:}
+You should be able
 \begin{itemize}
-  \item to \emph{apply} one-way functions to security problems.
+  \item to \emph{analyze} a problem to determine if its solution requires a 
+    one-way function.
 \end{itemize}
 
-The basics are covered by
-Chapter 5 in Anderson's \citetitle{Anderson2008sea}~\cite{Anderson2008sea} and
-Chapter 14 in Gollmann's \citetitle{Gollmann2011cs}~\cite{Gollmann2011cs}.
-%We will also cover some topics from 
-%\citetitle{KatzLindell-v1}~\cite{KatzLindell-v1} and 
-%\citetitle{GoldreichFOC-1}~\cite{GoldreichFOC-1}.
-We also refer to the \citetitle{EOCS}~\cite{EOCS}.
+\emph{Reading:}
+The content is covered by the following literature:
+\begin{itemize}
+  \item \citetitle{EOCS}~\cite{EOCS}.
+\end{itemize}
