Updates pub-key to better README format

--- a/pub-key/abstract.tex
+++ b/pub-key/abstract.tex
@@ -1,13 +1,19 @@
+\emph{Summary:}
 Public-key cryptography has a central role in modern cryptographic solutions, 
 it ranges from HTTPS to electronic ID systems.
 
-The \acp{ILO} are that you should be able
+\emph{Intended learning outcomes:}
+You should be able
 \begin{itemize}
-  \item to \emph{apply} various public-key cryptography primitives in 
-    situations based on their high-level properties.
+  \item to \emph{analyse} a problem situation to determine suitable properties 
+    and
+  \item to \emph{apply} various public-key cryptography primitives in suitable 
+    situations determined by their high-level properties.
 \end{itemize}
 
-The basics are covered by
-Chapter 5 in Anderson's \citetitle{Anderson2008sea}~\cite{Anderson2008sea} and
-Chapter 14 in Gollmann's \citetitle{Gollmann2011cs}~\cite{Gollmann2011cs}.
-Furthermore, we refer to the \citetitle{EOCS}~\cite{EOCS}.
+\emph{Reading:}
+This topic is partly covered by
+\begin{itemize}
+  \item Chapter 5 in \citetitle{Anderson2008sea}~\cite{Anderson2008sea} and
+  \item \citetitle{EOCS}~\cite{EOCS}.
+\end{itemize}
