--- a/zkp-smc/abstract.tex
+++ b/zkp-smc/abstract.tex
@@ -1,15 +1,20 @@
+\emph{Summary:}
 This session introduces two important building blocks for constructing highly 
 secure services. Zero-knowledge proofs-of-knowledge are a core primitive used 
 in many scenarios, e.g. for authentication or correctness during protocol runs. 
 Multiparty computation allows several mistrusting parties to do joint 
 computations including each individual's secret data.
 
-The \acp{ILO} are that you should be able
+\emph{Intended learning outcomes:}
+You should be able
 \begin{itemize}
   \item to \emph{apply} zero-knowledge proofs-of-knowledge and secure 
     multiparty computation based on the high-level properties of the primitives 
     and the situation at hand.
 \end{itemize}
 
-We refer to the articles on these topics in the \citetitle{EOCS}~\cite{EOCS} 
-for reading.
+\emph{Reading:}
+The topic is covered by
+\begin{itemize}
+  \item various entries in \citetitle{EOCS}~\cite{EOCS}.
+\end{itemize}
