--- a/sidechannels/abstract.tex
+++ b/sidechannels/abstract.tex
@@ -1,3 +1,4 @@
+\emph{Summary:}
 When looking at secure systems it is easy to assume they are safe just because 
 the secret keys are not directly reachable.
 This is not always true.
@@ -7,15 +8,19 @@ For instance, the time an operation takes to perform reveals some information
 about the operands.
 This is what is called side-channel information.
 
-The \acp{ILO} are that you are able
+\emph{Intended learning outcomes:}
+You are able
 \begin{itemize}
   \item to \emph{reflect} on the security of implementations, or lack thereof, 
     from the aspect of side-channels.
 \end{itemize}
 
-An overview of this area is provided in~\cite[Ch.~17]{Anderson2008sea}.
-An interesting paper on this topic is 
-\citetitle{genkin2013rsa}~\cite{genkin2013rsa} where the authors extract RSA 
-keys using acoustic side-channels, \ie they analyse the sound emitted by the 
-electrical circuitry to find the computations done and hence derive the RSA key 
-used.
+\emph{Reading:}
+The topci is covered by
+\begin{itemize}
+  \item Chapter 17 of \cite{Anderson2008sea},
+  \item \citetitle{genkin2013rsa}~\cite{genkin2013rsa} where the authors 
+    extract RSA keys using acoustic side-channels, \ie they analyse the sound 
+    emitted by the electrical circuitry to find the computations done and hence 
+    derive the RSA key used.
+\end{itemize}
