Moves \printbibliography to slides: improves inclusion

--- a/zkp-smc/zkp-smc-slides.tex
+++ b/zkp-smc/zkp-smc-slides.tex
@@ -57,4 +57,9 @@
 \end{abstract}
 
 \mode<all>{\input{contents.tex}}
+
+\begin{frame}[allowframebreaks]
+  \printbibliography{}
+\end{frame}
+
 \end{document}
