--- a/one-way/one-way-slides.tex
+++ b/one-way/one-way-slides.tex
@@ -57,4 +57,8 @@
 \end{abstract}
 
 \mode<all>{\input{contents.tex}}
+
+\begin{frame}[allowframebreaks]
+  \printbibliography
+\end{frame}
 \end{document}
