tilkry-overview: Links to files instead
This fixes a bug that \subimport causes, namely that when in a \section
in a different directory, LaTeX cannot access slides.toc.

--- a/tilkry-overview/contents.tex
+++ b/tilkry-overview/contents.tex
@@ -24,9 +24,9 @@
 \end{frame}
 
 
-\mode<all>{\subimport*{../one-way/}{contents.tex}}
-\mode<all>{\subimport*{../pub-key/}{contents.tex}}
-\mode<all>{\subimport*{../zkp-smc/}{contents.tex}}
+\mode<all>{\input{one-way.tex}}
+\mode<all>{\input{pub-key.tex}}
+\mode<all>{\input{zkp-smc.tex}}
 
 
 %%% REFERENCES %%%
