--- a/applied-hash/fingerprinting/preamble.tex
+++ b/applied-hash/fingerprinting/preamble.tex
@@ -24,7 +24,7 @@
 \let\email\texttt
 
 \usepackage[outputdir=ltxobj]{minted}
-\setminted{autogobble}
+\setminted{autogobble,fontsize=\footnotesize}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
