--- a/applied-hash/fingerprinting/slides.tex
+++ b/applied-hash/fingerprinting/slides.tex
@@ -97,7 +97,7 @@
 
 \begin{document}
 \title{%
-  Applied Hash Functions
+  Applied Hash Functions: Fingerprinting
 }
 \author{Daniel Bosk}
 \institute{%
