--- a/applied-hash/fingerprinting/notes.tex
+++ b/applied-hash/fingerprinting/notes.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 \title{%
-  Applied Hash Functions
+  Applied Hash Functions: Fingerprinting
 }
 \author{Daniel Bosk}
 \institute{%
