Adds "what properties" for git

--- a/applied-hash/fingerprinting/contents.tex
+++ b/applied-hash/fingerprinting/contents.tex
@@ -285,3 +285,23 @@ $
 %  \end{exercise}
 %\end{frame}
 
+\begin{frame}
+  \begin{exercise}
+    \begin{itemize}
+      \item What properties do we want from the hash function?
+    \end{itemize}
+  \end{exercise}
+\end{frame}
+
+\begin{frame}
+  \begin{solution}
+    \begin{itemize}
+      \item Compression (short identifiers)
+      \item Collision resistance:
+        \begin{itemize}
+          \item Cryptographic: in case we want authentication.
+          \item Otherwise, just to avoid two different objects colliding.
+        \end{itemize}
+    \end{itemize}
+  \end{solution}
+\end{frame}
