--- a/applied-hash/commitments/preamble.tex
+++ b/applied-hash/commitments/preamble.tex
@@ -14,7 +14,7 @@
 \usepackage[single]{acro}
 
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
-\addbibresource{applied-hash.bib}
+\addbibresource{crypto.bib}
 
 \usepackage{subcaption}
 
