Adds video for fingerprinting

--- a/applied-hash/fingerprinting/abstract.tex
+++ b/applied-hash/fingerprinting/abstract.tex
@@ -7,16 +7,30 @@
 
 % XXX Summary
 \emph{Summary:}
-\dots
+We talk about the fingerprinting property of hash functions.
+We look at two example use cases: BitTorrent and Git.
 
 % XXX Motivation and intended learning outcomes
 \emph{Intended learning outcomes:}
-\dots
+You should be able to apply hash functions in various settings.
 
 % XXX Prerequisites
 \emph{Prerequisites:}
-\dots
+We assume that you know about hash functions in general, but we recap the main 
+properties.
 
 % XXX Reading material
 \emph{Reading:}
-\dots
+You can learn more about Git's internals here:
+\begin{center}
+  \url{https://git-scm.com/book/en/v2/Git-Internals-Git-Objects}
+\end{center}
+A good starting point to get an overview of BitTorrent is its page on 
+Wikipedia:
+\begin{center}
+  \url{https://en.wikipedia.org/wiki/BitTorrent}
+\end{center}
+Otherwise, the BitTorrent specification is the authoritative source:
+\begin{center}
+  \url{https://www.bittorrent.org/beps/bep_0003.html}
+\end{center}
