--- a/applied-hash/hash-review.tex
+++ b/applied-hash/hash-review.tex
@@ -2,21 +2,21 @@
 
 \section[Hash functions]{What was a hash function now again?}
 
-\begin{frame}
-  \begin{definition}[One-way function\footfullcite{GoldreichFOC-1}]
-    \begin{itemize}
-      \item Let \(h\colon \{0,1\}^*\to \{0,1\}^*\).
-      \item \(h\) is \emph{one-way} if
-        \begin{enumerate}
-          \item there exists an efficient algorithm \(A\) such that \(A(x) 
-              = h(x)\);
-          \item for every efficient algorithm \(A^\prime\), every positive 
-            polynomial \(p(\cdot)\) and all sufficiently large \(n\)'s
-            \[\Prob{A^\prime(h(x), 1^n) \in h^{-1}(h(x))} < \frac{1}{p(n)}\]
-        \end{enumerate}
-    \end{itemize}
-  \end{definition}
-\end{frame}
+%\begin{frame}
+%  \begin{definition}[One-way function\footfullcite{GoldreichFOC-1}]
+%    \begin{itemize}
+%      \item Let \(h\colon \{0,1\}^*\to \{0,1\}^*\).
+%      \item \(h\) is \emph{one-way} if
+%        \begin{enumerate}
+%          \item there exists an efficient algorithm \(A\) such that \(A(x) 
+%              = h(x)\);
+%          \item for every efficient algorithm \(A^\prime\), every positive 
+%            polynomial \(p(\cdot)\) and all sufficiently large \(n\)'s
+%            \[\Prob{A^\prime(h(x), 1^n) \in h^{-1}(h(x))} < \frac{1}{p(n)}\]
+%        \end{enumerate}
+%    \end{itemize}
+%  \end{definition}
+%\end{frame}
 
 \begin{frame}
   \begin{definition}[Preimage resistance {[one way]}]
