--- a/applied-hash/blockchains/notes.tex
+++ b/applied-hash/blockchains/notes.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 \title{%
-  Applied Hash Functions: Fingerprinting
+  Applied Hash Functions: Block Chains
 }
 \author{Daniel Bosk}
 \institute{%
