--- a/applied-hash/blockchains/preamble.tex
+++ b/applied-hash/blockchains/preamble.tex
@@ -14,6 +14,7 @@
 \usepackage[single]{acro}
 
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\addbibresource{blockchains.bib}
 \addbibresource{crypto.bib}
 
 \usepackage{subcaption}
