--- a/applied-hash/blockchains/slides.tex
+++ b/applied-hash/blockchains/slides.tex
@@ -97,7 +97,7 @@
 
 \begin{document}
 \title{%
-  Applied Hash Functions: Fingerprinting
+  Applied Hash Functions: Block Chains
 }
 \author{Daniel Bosk}
 \institute{%
