--- a/applied-hash/blockchains/abstract.tex
+++ b/applied-hash/blockchains/abstract.tex
@@ -1,22 +1,8 @@
-% What's the problem?
-% Why is it a problem? Research gap left by other approaches?
-% Why is it important? Why care?
-% What's the approach? How to solve the problem?
-% What's the findings? How was it evaluated, what are the results, limitations, 
-% what remains to be done?
-
-% XXX Summary
-\emph{Summary:}
-\dots
-
-% XXX Motivation and intended learning outcomes
-\emph{Intended learning outcomes:}
-\dots
-
-% XXX Prerequisites
-\emph{Prerequisites:}
-\dots
-
-% XXX Reading material
-\emph{Reading:}
-\dots
+This learning session focuses on how to design systems by first analysing the 
+the desired properties and then combining the proper cryptographics mechanisms 
+to achieve them.
+We will specifically look at the Bitcoin cryptographic 
+currency~\cite{Nakamoto2008bap}.
+Other sources with good overviews of Bitcoin 
+are~\cite{Peck2012btc,Kaminsky2013lct}.
+%\cite{Barber2012btb}
