--- a/applied-hash/blockchains/abstract.tex
+++ b/applied-hash/blockchains/abstract.tex
@@ -1,5 +1,5 @@
 This learning session focuses on how to design systems by first analysing the 
-the desired properties and then combining the proper cryptographics mechanisms 
+the desired properties and then combining the proper cryptographic mechanisms 
 to achieve them.
 We will specifically look at the Bitcoin cryptographic 
 currency~\cite{Nakamoto2008bap}.
