Improves applications/postbox slides, adds whiteboard from session

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -70,17 +70,17 @@ provide and why?
     \begin{exercise}[Design the digital mail service]
       \begin{description}
         \item[Registration]
-          A user can register for a post box.
-          This post service will replace physical mail.
+          Alice can register for a post box.
 
         \item[Sending mail]
-          A sender should be able to send mail to a recipient.
+          Alice should be able to send mail to a recipient Bob.
           Mail should not be readable by any intermediary.
 
         \item[Reading mail]
-          The owner can read all their mail.
+          Bob can read all his received mail.
           Service staff should not be able to read mail!
-          Recipient must be able to verify the authenticity of mail.
+          Bob must be able to verify the authenticity of mail, \eg that it's 
+          from Alice.
       \end{description}
     \end{exercise}
 
@@ -89,8 +89,8 @@ provide and why?
     \begin{block}{Organization}
       \begin{itemize}
         \item Groups of around three--four people.
-        \item Work for 45 minutes, take 15 min break (60 min incl break).
-        \item Group presentations and discussions.
+        \item Work for 30 minutes, take 15 min break (45 min incl break).
+        \item Group presentations and discussions (15--20 minutes).
       \end{itemize}
     \end{block}
   \end{frame}
@@ -98,7 +98,7 @@ provide and why?
   \begin{frame}
     \begin{solution}
       \begin{itemize}
-        \item Presentation from groups.
+        \item Presentation from groups (15--20 minutes).
       \end{itemize}
     \end{solution}
 
@@ -113,10 +113,13 @@ provide and why?
   \begin{frame}
     \begin{exercise}[Adapt for anonymity]
       \begin{description}
-        \item[Anonymous mail]
-          A sender can send a letter to a recipient, but neither the recipient 
-          nor the service will learn the identity of the sender.
-          The service will not learn the recipient either.
+        \item[Sender anonymity]
+          Alice can send a letter to Bob, but neither Bob nor the service will 
+          learn the identity of the sender.
+
+        \item[Sender--receiver anonymity]
+          Same, but the service will not learn that Bob is the recipient 
+          either.
       \end{description}
     \end{exercise}
 
@@ -126,8 +129,23 @@ provide and why?
       \begin{itemize}
         \item Groups of around three--four people.
         \item Work for 20 minutes.
+        \item Group presentations and discussions (15--20 minutes).
       \end{itemize}
     \end{block}
+  \end{frame}
+
+  \begin{frame}
+    \begin{solution}
+      \begin{itemize}
+        \item Presentation from groups (15--20 minutes).
+      \end{itemize}
+    \end{solution}
+
+    \begin{question}
+      \begin{itemize}
+        \item Limitations?
+      \end{itemize}
+    \end{question}
   \end{frame}
 }
 
