--- a/applications/digital-postbox-tutorial/slides.tex
+++ b/applications/digital-postbox-tutorial/slides.tex
@@ -84,7 +84,7 @@
 \ProvideDocumentEnvironment{exercise}{o}{%
   \setbeamercolor{block body}{bg=yellow!10,fg=black}
   \setbeamercolor{block title}{bg=yellow,fg=black}
-  \setbeamercolor{local structure}{fg=yellow}
+  \setbeamercolor{local structure}{fg=yellow!50!black}
   \IfValueTF{#1}{%
     \begin{block}{Exercise: #1}
   }{%
