--- a/applied-hash/tutorial/contents.tex
+++ b/applied-hash/tutorial/contents.tex
@@ -1,5 +1,15 @@
 \mode*
 
+\section{Difficult parts}
+
+\begin{frame}
+  \begin{question}
+    \begin{itemize}
+      \item What were the most difficult parts in the prep material?
+    \end{itemize}
+  \end{question}
+\end{frame}
+
 \section{A secure guessing game}
 
 \begin{frame}
@@ -21,7 +31,8 @@
     \begin{itemize}
       \item Eve sent a love letter to Alice.
       \item In it, she confessed her love for Alice, but also included a proof 
-        of \(P = NP\) as a token of her sincerity.
+        of \(P = NP\) as a token of her sincerity. (And consequently that she 
+        could break all of Alice's crypto.)
 
         \pause
 
